--- a/package.json
+++ b/package.json
@@ -1,22 +1,29 @@
 {
-    "name": "proxy-with-nodejs",
+    "name": "inject-fingerprint",
     "version": "1.0.0",
-    "description": "Testando modulo AnyProxy",
-    "main": "server.js",
+    "description": "Create Internal proxy to inject fingerprint",
+    "main": "index.js",
     "dependencies": {
         "anyproxy": "^4.1.3",
-        "https-proxy-agent": "^5.0.0"
+        "https-proxy-agent": "^5.0.0",
+        "moment": "^2.29.1",
+        "winston": "^3.3.3"
     },
     "devDependencies": {
-        "nodemon": "^2.0.7"
+        "chai": "^4.3.4",
+        "eslint": "^7.29.0",
+        "mocha": "^9.0.0",
+        "nodemon": "^2.0.7",
+        "selenium-webdriver": "^4.0.0-beta.4"
     },
     "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1",
-        "start": "./node_modules/nodemon/bin/nodemon.js server.js"
+        "test": "node_modules/mocha/bin/mocha test/fingerprint.test.js --timeout 999999",
+        "startDev": "./node_modules/nodemon/bin/nodemon.js server.js",
+        "start": "node server.js"
     },
     "repository": {
         "type": "git",
-        "url": "git+https://github.com/laissonsilveira/proxy-with-nodejs.git"
+        "url": "https://github.com/laissonsilveira/proxy-with-nodejs.git"
     },
     "keywords": [
         "Proxy",
