--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "version": "1.0.0",
     "description": "Create Internal proxy to inject fingerprint",
     "main": "index.js",
+    "private": "false",
     "dependencies": {
         "anyproxy": "^4.1.3",
         "https-proxy-agent": "^5.0.0",
@@ -17,22 +18,24 @@
         "selenium-webdriver": "^4.0.0-beta.4"
     },
     "scripts": {
-        "test": "node_modules/mocha/bin/mocha test/fingerprint.test.js --timeout 999999",
-        "startDev": "./node_modules/nodemon/bin/nodemon.js server.js",
-        "start": "node server.js"
+        "test": "node_modules/mocha/bin/mocha test/fingerprint.test.js --timeout 999999"
     },
     "repository": {
         "type": "git",
-        "url": "https://github.com/laissonsilveira/proxy-with-nodejs.git"
+        "url": "https://github.com/laissonsilveira/inject-fingerprint.git"
     },
     "keywords": [
         "Proxy",
         "NodeJS"
     ],
-    "author": "laisson.r.silveira@gmail.com",
+    "author": {
+        "name": "Laisson R. Silveira",
+        "email": "laisson.r.silveira@gmail.com",
+        "url": "https://laissonsilveira.github.io"
+    },
     "license": "UNLICENSED",
     "bugs": {
-        "url": "https://github.com/laissonsilveira/proxy-with-nodejs/issues"
+        "url": "https://github.com/laissonsilveira/inject-fingerprint/issues"
     },
-    "homepage": "https://github.com/laissonsilveira/proxy-with-nodejs#readme"
+    "homepage": "https://github.com/laissonsilveira/inject-fingerprint#readme"
 }
