--- a/package.json
+++ b/package.json
@@ -46,5 +46,8 @@
     "bugs": {
         "url": "https://github.com/laissonsilveira/inject-fingerprint/issues"
     },
-    "homepage": "https://github.com/laissonsilveira/inject-fingerprint#readme"
+    "homepage": "https://github.com/laissonsilveira/inject-fingerprint#readme",
+    "engines": {
+        "node": ">=10"
+    }
 }
