--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "dependencies": {
         "anyproxy": "^4.1.3",
         "https-proxy-agent": "^5.0.0",
+        "moment": "^2.29.1",
         "winston": "^3.3.3"
     },
     "devDependencies": {
@@ -48,5 +49,9 @@
     "homepage": "https://github.com/laissonsilveira/inject-fingerprint#readme",
     "engines": {
         "node": ">=10"
+    },
+    "publishConfig": {
+        "access": "public",
+        "registry": "https://registry.npmjs.com/"
     }
 }
