Change publish repository link

--- a/package.json
+++ b/package.json
@@ -52,6 +52,6 @@
     },
     "publishConfig": {
         "access": "public",
-        "registry": "https://registry.npmjs.com/"
+        "registry": "https://registry.npmjs.org/"
     }
 }
